# biodiversity_pipeline

./: .dockerignore  README.md  pyproject.toml  requirements.txt  setup.py
docker/: .dockerignore  Dockerfile.dataflow
flex_templates/: Dockerfile.flex  launch_flex_template.py  launcher.py  taxonomy_flex.py
src/: biogeo_summary_pipeline.py  cleaning_occs_pipeline.py  climate_summary_pipeline.py  data_provenance_pipeline.py  occurrences_pipeline.py  range_estimation_pipeline.py  spatial_annotation_pipeline.py  taxonomy_pipeline.py
src/biodiv_audit/: audit_script.py  helpers_audit.py
src/biodiv_backfill/: adhoc_reingest_cleaned_occurrences.py  adhoc_reload_spatial_annotations.py  adhoc_rerun_ENA_GBIF_taxonomy_validation.py
src/biodiv_pipelines/: biogeo_summary_pipeline.py  cleaning_occs_pipeline.py  climate_summary_pipeline.py  data_provenance_pipeline.py  ingest_genome_annotations_pipeline.py  load_genome_annotations_pipeline.py  occurrences_pipeline.py  range_estimation_pipeline.py  spatial_annotation_pipeline.py  taxonomy_pipeline.py
src/biodiv_pipelines/utils/: bq_genome_annotations_schema.json  cleaning_occs.py  helpers.py  transforms.py
src/utils/: cleaning_occs.py  transforms.py
utils/: bq_gbif_occurrences_schema.json  bq_taxonomy_schema.json  cleaning_occs.py  helpers.py  transforms.py
